Added contact button

--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <style>
-      h1 {
-        text-align: center;
-        color: blue;
-      }
-    </style>
   </head>
   <body>
     <h1>Hello Git</h1>
+    <button>Contact</button>
     <script src="script.js"></script>
   </body>
 </html>
